--- a/Market_WebAPI/packages.config
+++ b/Market_WebAPI/packages.config
@@ -32,6 +32,7 @@
   <package id="Microsoft.Owin.Security.OAuth" version="4.2.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
   <package id="Modernizr" version="2.8.3" targetFramework="net472" />
+  <package id="MSBuild.Microsoft.VisualStudio.Web.targets" version="14.0.0.3" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NuGet.Common" version="5.10.0" targetFramework="net472" />
   <package id="NuGet.Configuration" version="5.10.0" targetFramework="net472" />
